GNOME Bugzilla – Bug 706722
path bar looks broken when the window is to small to fit the entire pathbar
Last modified: 2013-08-31 21:26:43 UTC
Created attachment 253023 [details] screenshot There is a big gap in it. This doesn't happen in Nautilus.
Created attachment 253039 [details] [review] pathbar: remove unused spacing private member It's always zero.
Created attachment 253040 [details] [review] pathbar: fix positioning of the down slider button So that it's always linked with the rest of the pathbar.
hmm. this makes the right arrow button jump out from underneath your mouse pointer whenever you click it. not ideal.
That's also the behavior that Nautilus has though, so while not ideal, at least it would be consistent and look less broken than it does right now.
Attachment 253039 [details] pushed as c9cc58d - pathbar: remove unused spacing private member Attachment 253040 [details] pushed as 89214ca - pathbar: fix positioning of the down slider button