pathbar: remove unused spacing private member

It's always zero.

https://bugzilla.gnome.org/show_bug.cgi?id=706722